
  * Merge changes from upstream 1.20-1
    * From upstream: Have piaware exit if not killed by a restart

  * Always log to stdout, never to /tmp, to reduce confusion when migrating
    from FlightAware piaware.

  * Remove the retry schedule on init.d stop, as it interferes with upgrades
    where piaware is the parent of a package upgrade that tries to stop
    piaware.

 -- Oliver Jowett <oliver@mutability.co.uk>  Fri, 06 Feb 2015 18:50:23 +0000

piaware-mutability (1.19-3mu-2) unstable; urgency=medium

  * Add an overrideMAC option to allow specifying a site ID manually.

 -- Oliver Jowett <oliver@mutability.co.uk>  Tue, 27 Jan 2015 13:07:37 +0000

piaware-mutability (1.19-3mu-1) unstable; urgency=medium

  * Merge changes from upstream 1.19-{1,2,3} releases.
  * Use --numeric to speed up netstat output.
  * Handle IPv6 in netstat output.
  * Use a placeholder process name when the real name of a listening
    process is not provided by netstat.
  * When sending system health info is disabled, send empty health messages
    to keep the adept server happy, rather than omitting them entirely.
  * Add a sendLogMessages option to control whether log messages are sent to
    the FA server as well as logged locally (they may contain sensitive data).
  * Support configuration via debconf.
  * Move fatsv-data-source dependency to Recommends.

 -- Oliver Jowett <oliver@mutability.co.uk>  Thu, 01 Jan 2015 22:23:52 +0000

piaware (1.19-3) stable; urgency=medium

  * The 1.19-2 package was corrupted.  We always bump the version for every
    change due to CDN caching and whatnot.

 -- FlightAware Developers <adsb-devs@flightaware.com>  Tue, 30 Dec 2014 22:32:41 +0000

piaware (1.19-2) stable; urgency=medium

  * Compress the ADS-B messages, not just the non-ADS-B messages.

 -- FlightAware Developers <adsb-devs@flightaware.com>  Tue, 30 Dec 2014 21:02:44 +0000

piaware (1.19-1) stable; urgency=medium
