@@ -91,8 +91,6 @@ do_stop()
 	RETVAL="$?"
 	[ "$RETVAL" = 2 ] && return 2
         sleep 1
-	# Many daemons don't delete their pidfiles when they exit.
-	rm -f $PIDFILE
 	return "$RETVAL"
 }
 
